fix: create context insted of redux collapsed

--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -12,6 +12,3 @@
         align-items: stretch;
     }
 }
-
-@media screen and (max-width: 400px) {
-}
